WIP: Theme development

--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ hr {
 
 ul,
 ol {
-	margin: 0 0 1.5em 3em;
+	margin: 0 0 1em 1em;
 }
 
 ul {
@@ -747,20 +747,24 @@ textarea {
 	display: block;
 }
 
+/*
 .post,
 .page {
 	margin: 0 0 1.5em;
 }
+*/
 
 .updated:not(.published) {
 	display: none;
 }
 
+/*
 .page-content,
 .entry-content,
 .entry-summary {
 	margin: 1.5em 0 0;
 }
+*/
 
 .page-links {
 	clear: both;
