--- a/assets/css/arc.css
+++ b/assets/css/arc.css
@@ -263,6 +263,7 @@ body {
 .posted-on {
 	font-weight: 900;
 }
+.project-tags li a,
 .posted-in a,
 .pagination a,
 .entry-header .pdf a,
@@ -272,6 +273,7 @@ body {
 	color: var(--color-black);
 	text-decoration: none;
 }
+.project-tags li a:hover,
 .posted-in a:hover,
 .pagination a:hover,
 .entry-header .pdf a:hover,
@@ -298,4 +300,18 @@ body {
 .edit-link {
 	display: block;
 	margin: 2em 0 2em 0;
+}
+.project-tags {
+	font-size: var(--font-size-small);
+}
+.project-tags span {
+	font-weight: 700;
+}
+.project-tags ul {
+	display: inline;
+	margin-left: .15em;
+	padding-left: 0;
+}
+.project-tags li {
+	display: inline;
 }
