Updated style name and declarations

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
-Theme Name: Angkor Research and Consulting
-Theme URI: http://underscores.me/
+Theme Name: ARC
+Theme URI: https://angkorresearch.com/
 Author: robert@k4media.com
 Author URI: https://k4media.com/
 Description: Custom WP theme for Angkor Research and Consulting
@@ -10,7 +10,6 @@ Requires PHP: 8.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: arc
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
