Fix FP .project style

--- a/assets/css/arc.css
+++ b/assets/css/arc.css
@@ -160,6 +160,9 @@ body {
 .entry-meta .project-client {
 	color: var(--color-gray);
 }
+.stage #primary.single {
+	flex: 1 1 75%;
+}
 #secondary h2 {
 	font-size: var(--font-size-body);
 }
